tests/ui/parser/pat-tuple-3.rs
fn main() {
    match (0, 1, 2) {
        (.., pat, ..) => {}
        //~^ ERROR `..` can only be used once per tuple pattern
    }
}
